Fixed background color to all grey on the nav bar and drop-down buttons. Added top margin to CSS Tutorial heading to add space down from Home button. Fixed max-width of greenbox. Added scroll overflow to CSS Example box.

--- a/w3scAss1.css
+++ b/w3scAss1.css
@@ -11,9 +11,13 @@ body {
   color: white;
 }
 
+.Tutorial {
+  margin-top: 5%;
+}
+
 .greenbox {
   min-width: 400px;
-  max-width: 1500px;
+  max-width: 3000px;
   min-height: 50px;
   max-height: 150px;
   overflow: hidden;
@@ -36,7 +40,7 @@ body {
   border-color: #E3E5E1;*/
   text-indent: 25px;
   background-color: #E3E5E1;
-  margin: 25px 5px 15px 5px;
+  margin: 25px 5px 0px 5px;
 }
 
 .inside-sample {
@@ -44,8 +48,8 @@ body {
   border-left-style: solid;
   border-left-width: 5px;
   border-left-color: #27D426;
-  overflow: hidden;
-  margin: 25px 20px 15px 20px;
+  overflow: scroll;
+  margin: 10px 20px 5px 20px;
   min-height: 50px;
   max-height: 200px;
   text-indent: 20px;
@@ -67,18 +71,6 @@ body {
   font-weight: bold;
 }
 
-.btns {
-  color: #FFF;
-  /*-- border: 1px solid #000; */
-  border-radius: 4px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  margin: 10px 0px;
-  padding: 20px;
-  text-decoration: none;
-}
-
 ul {
   list-style-type: none;
   margin: 0;
@@ -86,6 +78,7 @@ ul {
   overflow: hidden;
   background-color: #777876;
   font-family: Verdana,san-serif;
+  color: white;
 }
 
 li {
@@ -94,10 +87,10 @@ li {
 
 li a, .drpbtn {
     display: block;
-    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    background-color: #777876;
 }
 
 /* Change the link color to #111 (black) on hover */
@@ -112,14 +105,14 @@ li.MORE {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    /*background-color: #f9f9f9;*/
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 .dropdown-content a {
-    color: black;
+    color: white;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -127,7 +120,7 @@ li.MORE {
 }
 
 .dropdown-content a:hover {
-  background-color: #f1f1f1
+  /*background-color: #777876;*/
 }
 
 .MORE:hover .dropdown-content {
@@ -185,9 +178,33 @@ li a:hover:not(.active) {
   margin: 25px 25px;
 }
 
+.left {
+  float:left;
+}
+
+.clear:after,.clear:before {
+  content: "";
+  display: table;
+}
+
+.clear {
+  clear: both;
+}
+
+.Online-Cert {
+  margin-left: 2%;
+}
+
+.btn-holder {
+  width: 100%;
+}
+
+#img-holder {
+  padding-top: 2%;
+}
 
 /*.button1 {*/
-//    background-color: #4CAF50; /* Green */
+/*    background-color: #4CAF50; /* Green */
 /*    float: right;*/
 /*    border: none;*/
 /*    color: white;*/
@@ -197,12 +214,12 @@ li a:hover:not(.active) {
 /*    font-size: 16px;*/
 /*    margin: 4px 2px;*/
 /*    cursor: pointer;*/
-//    -webkit-transition-duration: 0.4s; /* Safari */
+/*   -webkit-transition-duration: 0.4s; /* Safari */
 /*    transition-duration: 0.4s;*/
 /*}*/
 
 /*.button {*/
-//    background-color: #FFF; /* White */
+/*    background-color: #FFF; /* White */
 /*    border: 2px solid #555555;*/
 /*    float: left;*/
 /*    color: black;*/
@@ -220,14 +237,14 @@ li a:hover:not(.active) {
 }*/
 
   /* unvisited link */
-a:link {
+a {
     color: black;
 }
 
 /* visited link */
-a:visited {
+/*a:visited {
     color: black;
-}
+}*/
 
 /* mouse over link */
 a:hover {
